<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="14dp"
        android:background="@color/background">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:contentDescription="@string/avatar"
            app:srcCompat="@drawable/placeholder_image"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/avatar"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/avatar"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/birth"
            android:textColor="@color/black"
            android:textSize="16sp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>